# schema/openapi/openapi.yaml
@@ -1056,7 +1056,7 @@ components:
         - code
         - company_id
         - display_name
-        - is_active
+        - status
         - metadata
       properties:
         id:
@@ -1082,8 +1082,8 @@ components:
           nullable: true
           type: string
           format: uuid
-        is_active:
-          type: boolean
+        status:
+          type: string
         metadata:
           type: object
 
@@ -1106,7 +1106,7 @@ components:
         - code
         - company_id
         - display_name
-        - is_active
+        - status
         - metadata
       properties:
         code:
@@ -1129,8 +1129,8 @@ components:
           nullable: true
           type: string
           format: uuid
-        is_active:
-          type: boolean
+        status:
+          type: string
         metadata:
           type: object
 
@@ -1140,7 +1140,7 @@ components:
         - code
         - company_id
         - display_name
-        - is_active
+        - status
         - metadata
       properties:
         code:
@@ -1163,8 +1163,8 @@ components:
           nullable: true
           type: string
           format: uuid
-        is_active:
-          type: boolean
+        status:
+          type: string
         metadata:
           type: object
 
@@ -1191,8 +1191,8 @@ components:
           nullable: true
           type: string
           format: uuid
-        is_active:
-          type: boolean
+        status:
+          type: string
         metadata:
           type: object
 
